renderizado base completado

--- a/view/home.html
+++ b/view/home.html
@@ -1,12 +1,12 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Golang app</title>
-</head>
-<body>
-    <div>
-        <p>HOla españa!</p>
-    </div>
-</body>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Home</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+		<link rel="stylesheet" type="text/css" href="/static/css/styles.css"> 
+	</head>
+	<body class="container mx-auto px-4">
+<h1>Bienvenidos</h1>
+	</body>
 </html>
